// NOTE: Any changes to this service MUST also be made to email.Exporter and
// kept in sync with the adapter in cmd/email-exporter/main.go.
//
// TODO(#8410): Remove this comment once we've fully migrated to
// salesforce.Exporter.

syntax = "proto3";

package salesforce;
option go_package = "github.com/letsencrypt/boulder/salesforce/proto";

import "google/protobuf/empty.proto";

service Exporter {
  rpc SendContacts (SendContactsRequest) returns (google.protobuf.Empty);
  rpc SendCase (SendCaseRequest) returns (google.protobuf.Empty);
}

message SendContactsRequest {
  repeated string emails = 1;
}

message SendCaseRequest {
  string origin = 1;
  string subject = 2;
  string description = 3;
  string contactEmail = 4;
  string organization = 5;
  string accountId = 6;
  string rateLimitName = 7;
  string rateLimitTier = 8;
  string useCase = 9;
}

